Format pipeline CI configuration

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
-      - uses:
+      - uses: actions/cache@v1
         id: mix-format-cache
         with:
           path: deps
