Fix pipeline CI

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,12 +6,12 @@ jobs:
   check_sec:
     runs-on: ubuntu-latest
     strategy:
-      matix:
+      matrix:
         elixir: [1.14]
         otp: [24]
     steps:
       - uses: actions/checkout@v2
-      - uses: erlef/set-up@v1
+      - uses: erlef/setup-elixir@v1
         with:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
@@ -19,7 +19,7 @@ jobs:
         id: mix-sec-cache
         with:
           path: deps
-          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}-{1}')), github.workspace, '/mix.lock'}}
+          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}-{1}', github.workspace, '/mix.lock' ))}}
       - name: Install Mix Dependencies
         if: steps.mix-sec-cache.outputs.cache-hit != 'true'
         run: mix deps.get
